# openaleph

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  .prettierrc  CONTRIBUTING.md  Dockerfile  Makefile  README.md  aleph.env.docker  aleph.env.tmpl  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-multiarch.yml  build-ui.yml  build.yml  docs.yml  e2e.yml  pr.yml
aleph/: __init__.py  authz.py  authz_store.py  cache.py  core.py  manage.py  migration.py  oauth.py  queues.py  settings.py  util.py
aleph/api/: __init__.py
aleph/api/assemblers/: __init__.py  base.py  collection.py  entity.py
aleph/api/requests/: __init__.py  alert.py  bookmark.py  collection.py  entity.py  entityset.py  mapping.py  permission.py  role.py  tag.py  xref.py
aleph/index/: admin.py  collections.py  entities.py  indexes.py  notifications.py  util.py  xref.py
aleph/logic/: aggregator.py  alerts.py  archive.py  collections.py  diagrams.py  discover.py  documents.py  entities.py  entitysets.py  expand.py  export.py  graph.py  html.py  mapping.py  matching.py  notifications.py  processing.py  profiles.py  resolver.py  roles.py  util.py  xref.py
aleph/logic/resolver/: __init__.py  _legacy.py  core.py  etag.py  registry.py  ttl.py
aleph/logic/xref/: __init__.py  canonical.py  cleanup.py  compare.py  export.py  migrate.py  process.py  resolver.py  store.py
aleph/metrics/: collectors.py
aleph/migrate/: env.py
aleph/migrate/versions/: 48e003f89633_make_collections_taggable.py  575ded9400fd_collection_external_flag.py  5d52e680a2f3_create_tag_table.py  d9a841b3de0f_.py
aleph/model/: __init__.py  alert.py  bookmark.py  canonical.py  collection.py  common.py  discover.py  document.py  entity.py  entityset.py  event.py  export.py  mapping.py  permission.py  role.py  tag.py  xref.py
aleph/pages/: about.en.md  home.en.md
aleph/procrastinate/: queues.py  status.py  tasks.py  util.py
aleph/search/: __init__.py  facet.py  query.py  result.py
aleph/tests/: test_alert_schema.py  test_alerts_api.py  test_archive_api.py  test_authz.py  test_base_api.py  test_bookmark_schema.py  test_bookmarks_api.py  test_canonical_api.py  test_canonical_auth.py  test_canonical_schema.py  test_collection.py  test_collection_schema.py  test_collections_api.py  test_dashboard_api.py  test_discover_schema.py  test_discovery.py  test_discovery_api.py  test_discovery_schema.py  test_entities_api.py  test_entity_schema.py  test_entityset_schema.py  test_entitysets_api.py  test_event_schema.py  test_export_api.py  test_export_schema.py  test_groups_api.py  test_ingest_api.py  test_mapping_schema.py  test_mappings_api.py  test_metrics.py  test_notification_schema.py  test_notifications.py  test_notifications_api.py  test_percolate_api.py  test_permission_schema.py  test_profiles_api.py  test_resolver.py  test_resolver_e2e.py  test_role_schema.py  test_roles_api.py  (+13 more)
aleph/translations/: messages.pot
aleph/validation/: formats.py  spec.py
aleph/validation/schema/: collection.yml  common.yml  discover.yml  tag.yml
aleph/views/: __init__.py  alerts_api.py  archive_api.py  base_api.py  bookmarks_api.py  canonical_api.py  collections_api.py  context.py  entities_api.py  entitysets_api.py  exports_api.py  ingest_api.py  mappings_api.py  notifications_api.py  permissions_api.py  profiles_api.py  reconcile_api.py  resources.py  roles_api.py  serializers.py  sessions_api.py  status_api.py  stream_api.py  tags_api.py  util.py  xref_api.py
contrib/: test.sh
contrib/aleph-traefik-minio-keycloak/: docker-compose.yml
contrib/keycloak/: docker-compose.dev-keycloak.yml
docs/: index.md
docs/dev-admin-guide/101/: index.md
docs/dev-admin-guide/102/: backup.md  configuration.md  docker.md  services.md
docs/dev-admin-guide/103/: reindex.md  upgrade-3x.md  upgrade-4x.md  versions.md
docs/dev-admin-guide/104/: architecture.md  assemblers.md  docker.md  domain-models.md  index.md  resolver-cache.md  setup.md
docs/overrides/partials/: copyright.html
docs/stylesheets/: extra.css
docs/user-guide/101/: basic-search.md  homepage.md
docs/user-guide/102/: advanced-search.md  dataset-overview.md  dataset-search.md
docs/user-guide/103/: index.md  investigations.md  manage-access.md  map-data.md  network-diagrams.md  permissions.md
docs/user-guide/104/: cli.md  install.md  python.md
helm/elasticsearch/: Chart.yaml  values-prd.yaml  values-stg.yaml  values.yaml
helm/elasticsearch/templates/: elasticsearch.yaml
helm/openaleph/: Chart.yaml  values-prd.yaml  values-stg.yaml  values.yaml
helm/openaleph/templates/: _helpers.tpl  configmap.yaml  deployment-analyze.yaml  deployment-api.yaml  deployment-ingest.yaml  deployment-ui.yaml  deployment-worker.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  upgrade-job.yaml
mappings/: Makefile
ui/: .dockerignore  Dockerfile  Dockerfile.production  craco.config.js  nginx.conf  package-lock.json  package.json
ui/public/datasette-lite/: app.css  index.html  webworker.js
ui/src/: index.js  queries.js  selectors.js  testUtils.tsx
ui/src/actions/: canonicalActions.js  collectionActions.js  entityActions.js  exportActions.js  index.js
ui/src/app/: App.scss  Query.js  blueprint-overrides.scss  mixins.scss  storage.js  store.js  tables.scss  variables.scss
ui/src/content/: translations.json
ui/src/react-ftm/: themes.scss  variables.scss
ui/src/reducers/: canonicals.js  collectionDiscovery.js  entities.js  entitySets.js  entityTags.js  index.js  mutation.js  results.js  values.js
ui/src/util/: archiveUrl.js  columnHash.js  fetchCsvData.js  getCanonicalLink.js  getEntityLink.js  insertHighlights.js  isBase64Encoded.tsx  sqlWorker.js  togglePreview.js  tsconfig.json
ui/src/viewers/: AudioViewer.jsx  CSVExplorer.jsx  CSVExplorer.scss  DatasetteViewer.jsx  DatasetteViewer.scss  EmailViewer.jsx  (+11 more)
(+203 files in other folders)
