[project]
name = "aleph"
version = "3.17.0"
description = "Search and browse documents and data; find the people and companies you look for."
authors = [
    {name="Friedrich Lindenberg", email= "friedrich@pudo.org"},
    {name="OCCRP Data Team", email= "data@occrp.org"},
    {name="ID.IO", email= "hi@investigativedata.org"}
]
license = "MIT"
readme = "README.rst"
requires-python = ">3.10,<3.14"
dependencies = [
    "banal (==1.0.6)",
    "followthemoney (==3.7.4)",
    "followthemoney-store[postgresql] (==3.1.0)",
    "fingerprints (==1.2.3)",
    "servicelayer[amazon,google] (==1.23.1)",
    "normality (==2.5.0)",
    "pantomime (==0.6.1)",
    "flask (<3)",
    "flask-sqlalchemy (==3.1.1)",
    "flask-mail (==0.10.0)",
    "flask-migrate (==4.0.7)",
    "flask-cors (==5.0.0)",
    "flask-babel (==4.0.0)",
    "flask-talisman (==1.1.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "authlib (<1)",
    "elasticsearch (==7.17.0)",
    "marshmallow (==3.23.1)",
    "gunicorn[eventlet] (>=23.0.0,<24.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "apispec (>=6.8.1,<7.0.0)",
    "apispec-webframeworks (>=1.2.0,<2.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "babel (>=2.16.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "requests[security] (>=2.32.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "zipstream-new (>=1.1.8,<2.0.0)",
    "sentry-sdk (>=2.19.2,<3.0.0)",
    "prometheus-client (<0.21)",
    "followthemoney-compare (>=0.4.4,<0.5.0)",
    "poetry (>=2.0.0,<3.0.0)"

]

[project.scripts]
aleph = "aleph.manage:cli"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
Faker = "^30.8.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
debugpy = "^1.8.8"
ipython = "^8.29.0"
coverage = "^7.6.4"
nose = "^1.3.7"
bump2version = "^1.0.1"
black = "^24.10.0"
ruff = "^0.7.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
