[project]
name = "aleph"
version = "5.0.2"
description = "Search and browse documents and data; find the people and companies you look for."
authors = [
    { name = "Friedrich Lindenberg", email = "friedrich@pudo.org" },
    { name = "OCCRP Data Team", email = "data@occrp.org" },
    { name = "ID.IO", email = "hi@investigativedata.org" },
    { name = "Data and Research Center – DARC", email = "hi@dataresearchcenter.org" },
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.12, <4.0.0"
dependencies = [
    "openaleph-procrastinate (>=5.0.0,<6.0.0)",
    "openaleph-search @ git+https://github.com/openaleph/openaleph-search.git",
    "followthemoney (>=4.2.2,<5.0.0)",
    "ftmq[postgres] @ git+https://github.com/dataresearchcenter/ftmq.git",
    "normality (>=3.0.1,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "banal (>=1.0.6,<2.0.0)",
    "pantomime (==0.6.1)",
    "Flask (<3.0)",
    "Flask-SQLAlchemy (==3.1.1)",
    "Flask-Mail (==0.10.0)",
    "Flask-Migrate  (==4.0.7)",
    "Flask-Cors (==5.0.0)",
    "flask-babel (==4.0.0)",
    "flask-talisman (==1.1.0)",
    "SQLAlchemy (==2.0.36)",
    "alembic (==1.14.0)",
    "Authlib (==0.15.5)",
    "marshmallow (==3.23.1)",
    "gunicorn[eventlet] (==23.0.0)",
    "jsonschema (==4.23.0)",
    "apispec (==6.7.1)",
    "apispec-webframeworks (==1.2.0)",
    "blinker (==1.9.0)",
    "babel (==2.16.0)",
    "pyyaml (==6.0.2)",
    "python-frontmatter (==1.1.0)",
    "pyjwt (==2.9.0)",
    "cryptography (==43.0.3)",
    "requests[security] (==2.32.3)",
    "tabulate (==0.9.0)",
    "zipstream-new (==1.1.8)",
    "prometheus-client (>=0.17.1)",
    "followthemoney-compare (==0.4.4)",
    # servicelayer extras requirements
    "openaleph-servicelayer (>=1.23.3,<2.0.0)",
    "boto3 (>=1.11.9,<2.0.0)",
    "grpcio (>=1.32.0,<2.0.0)",
    "google-cloud-storage (>=1.31.0,<3.0.0)",
    "pytest (==8.3.3)",
    "pytest-cov (==6.0.0)",
    "factory-boy (==3.3.1)",
    "Faker (==30.8.2)",
    "debugpy (==1.8.8)",
    "ipython (==8.29.0)",
    "coverage (==7.6.4)",
    "nose (==1.3.7)",
    "bump2version (==1.0.1)",
    "black (==24.10.0)",
    "ruff (==0.7.3)",
    "isort (==5.13.2)",
    "mkdocs (==1.6.1)",
    "mkdocs-material (==9.6.11)",
    # TODO - remove sentry eventually
    "sentry-sdk[flask] (==2.19.2)",
    "legacy-cgi; python_version >= '3.13'",
    "lxml[html-clean] (>=5.4.0,<6.0.0)",
]

[project.scripts]
aleph = "aleph.manage:cli"

[project.gui-scripts]
aleph = "aleph.manage:cli"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
Faker = "^30.8.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
debugpy = "^1.8.8"
ipython = "^8.29.0"
coverage = "^7.6.4"
nose = "^1.3.7"
bump2version = "^1.0.1"
black = "^24.10.0"
ruff = "^0.7.3"
isort = "^5.13.2"
ipdb = "^0.13.13"
pytest-env = "^1.1.5"
fakeredis = "<2.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest_env]
DEBUG = 1
OPENALEPH_INGEST_DEFER = 0
OPENALEPH_ANALYZE_DEFER = 0
OPENALEPH_SEARCH_AUTH = 1
OPENALEPH_SEARCH_AUTH_FIELD = "collection_id"
PROCRASTINATE_SYNC = 1
PROCRASTINATE_APP = "aleph.procrastinate.tasks.app"
