[project]
name = "aleph"
version = "5.3.1-rc1"
description = "Search and browse documents and data; find the people and companies you look for."
authors = [
    { name = "Friedrich Lindenberg", email = "friedrich@pudo.org" },
    { name = "OCCRP Data Team", email = "data@occrp.org" },
    { name = "ID.IO", email = "hi@investigativedata.org" },
    { name = "Data and Research Center – DARC", email = "hi@dataresearchcenter.org" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "followthemoney (>=4.10.0,<5.0.0)",
    "openaleph-search @ git+https://github.com/openaleph/openaleph-search.git",
    "openaleph-procrastinate (>=5.3.1,<6.0.0)",
    "ftmq[postgres] (>=4.10.0,<5.0.0)",
    "nomenklatura (>=4.11.4,<5.0.0)",
    "normality (>=3.1.0,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "banal (>=1.0.6,<2.0.0)",
    "Flask (<3.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-cors (>=6.0.5,<7.0.0)",
    "flask-babel (>=4.0.0,<5.0.0)",
    "flask-talisman (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "authlib (<1)",
    "marshmallow (>=4.3.0,<5.0.0)",
    "gunicorn[eventlet] (>=26.0.0,<27.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "apispec (>=6.10.0,<7.0.0)",
    "apispec-webframeworks (>=1.2.0,<2.0.0)",
    "babel (>=2.18.0,<3.0.0)",
    "orjson (>=3.11.9,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-frontmatter (>=1.3.0,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "requests[security] (>=2.34.2,<3.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "zipstream-new (>=1.1.8,<2.0.0)",
    "prometheus-client (>=0.17.1)",
    "followthemoney-compare @ git+https://github.com/dataresearchcenter/followthemoney-compare.git",
    # servicelayer extras requirements
    "openaleph-servicelayer (>=1.24.0,<2.0.0)",
    "boto3 (>=1.11.9,<2.0.0)",
    "grpcio (>=1.32.0,<2.0.0)",
    "google-cloud-storage (>=1.31.0,<3.0.0)",
    # TODO - remove sentry eventually
    "sentry-sdk[flask] (==2.19.2)",
    "legacy-cgi; python_version >= '3.13'",
    "nh3 (>=0.3.6,<0.4.0)",
    "dateparser (>=1.4.1,<2.0.0)",
    "anystore[http,s3] (>=1.2.4,<2.0.0)",
]

[project.scripts]
aleph = "aleph.manage:cli"

[project.gui-scripts]
aleph = "aleph.manage:cli"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
Faker = "^30.8.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
debugpy = "^1.8.8"
ipython = "^8.29.0"
coverage = "^7.6.4"
nose = "^1.3.7"
bump2version = "^1.0.1"
black = "^26.1.0"
ruff = "^0.15.0"
isort = "^5.13.2"
ipdb = "^0.13.13"
pytest-env = "^1.1.5"
fakeredis = "<2.31"
mkdocs = "^1.6.1"
pre-commit = "^4.5.1"
zensical = "^0.0.36"
lxml = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest_env]
DEBUG = 1
OPENALEPH_INGEST_DEFER = 0
OPENALEPH_ANALYZE_DEFER = 0
OPENALEPH_SEARCH_AUTH = 1
OPENALEPH_SEARCH_AUTH_FIELD = "collection_id"
PROCRASTINATE_SYNC = 1
PROCRASTINATE_APP = "aleph.procrastinate.tasks.app"
NOMENKLATURA_XREF_ALGORITHM = "logic-v1"
ALEPH_HEALTH_CHECK_API_KEY = "test-health-key"
ALEPH_ALLOW_REGISTRATION = 1
OPENALEPH_SEARCH_PERCOLATION = 1
OPENALEPH_SEARCH_MATCHING_SINGLE_TOKEN_MIN_LENGTH = 7
